@@ -191,3 +191,4 @@ Revision	Log Message
 188		Update religion icons to work correctly
 189		Update credits in readme.txt
 190		Initial work on government conversion
+191		Convert tech group
